# SAMRAI

./: .gitlab-ci.yml  .gitmodules  .travis.yml  AbstractStream_8C.html  AbstractStream_8I.html  AbstractStream_8h.html  ArenaManager_8C.html  ArenaManager_8h.html  Arena_8C.html  Arena_8I.html  Arena_8h.html  ArrayDataAccess_8C.html  ArrayDataAccess_8h.html  ArrayDataBasicOps_8C.html  ArrayDataBasicOps_8h.html  ArrayDataIterator_8C.html  ArrayDataIterator_8I.html  ArrayDataIterator_8h.html  ArrayDataMiscellaneousOpsReal_8C.html  ArrayDataMiscellaneousOpsReal_8h.html  ArrayDataNormOpsComplex_8C.html  ArrayDataNormOpsComplex_8h.html  ArrayDataNormOpsInteger_8C.html  ArrayDataNormOpsInteger_8h.html  ArrayDataNormOpsReal_8C.html  ArrayDataNormOpsReal_8h.html  ArrayDataOperationUtilities_8C.html  ArrayDataOperationUtilities_8h.html  ArrayData_8C.html  ArrayData_8I.html  ArrayData_8h.html  ArraySpecial_8C.html  Array_8C.html  Array_8I.html  Array_8h.html  AssumedPartitionBox_8C.html  AssumedPartitionBox_8h.html  AssumedPartition_8C.html  AssumedPartition_8h.html  AsyncBergerRigoutsosNode_8C.html  (+3676 more)
source/SAMRAI/geom/: CMakeLists.txt  CartesianCellComplexConservativeLinearRefine.C  CartesianCellComplexConservativeLinearRefine.h  CartesianCellComplexLinearRefine.C  CartesianCellComplexLinearRefine.h  CartesianCellComplexWeightedAverage.C  CartesianCellComplexWeightedAverage.h  CartesianCellConservativeLinearRefine.C  CartesianCellConservativeLinearRefine.h  CartesianCellDoubleConservativeLinearRefine.C  CartesianCellDoubleConservativeLinearRefine.h  CartesianCellDoubleLinearRefine.C  CartesianCellDoubleLinearRefine.h  CartesianCellDoubleWeightedAverage.C  CartesianCellDoubleWeightedAverage.h  CartesianCellFloatConservativeLinearRefine.C  CartesianCellFloatConservativeLinearRefine.h  CartesianCellFloatLinearRefine.C  CartesianCellFloatLinearRefine.h  CartesianCellFloatWeightedAverage.C  CartesianCellFloatWeightedAverage.h  CartesianEdgeComplexWeightedAverage.C  CartesianEdgeComplexWeightedAverage.h  CartesianEdgeDoubleConservativeLinearRefine.C  CartesianEdgeDoubleConservativeLinearRefine.h  CartesianEdgeDoubleWeightedAverage.C  CartesianEdgeDoubleWeightedAverage.h  CartesianEdgeFloatConservativeLinearRefine.C  CartesianEdgeFloatConservativeLinearRefine.h  CartesianEdgeFloatWeightedAverage.C  CartesianEdgeFloatWeightedAverage.h  CartesianFaceComplexWeightedAverage.C  CartesianFaceComplexWeightedAverage.h  CartesianFaceDoubleConservativeLinearRefine.C  CartesianFaceDoubleConservativeLinearRefine.h  CartesianFaceDoubleWeightedAverage.C  CartesianFaceDoubleWeightedAverage.h  CartesianFaceFloatConservativeLinearRefine.C  CartesianFaceFloatConservativeLinearRefine.h  CartesianFaceFloatWeightedAverage.C  (+45 more)
source/SAMRAI/geom/dox/: manual.dox  manual_cartesian.dox  manual_cartesian_grid_geom.dox  manual_cartesian_operators_cell.dox  manual_cartesian_operators_fortran.dox  manual_cartesian_patch_geom.dox  manual_generic.dox  manual_multiblock.dox  manual_multiblock_grid_geom.dox  manual_multiblock_patch_geom.dox  manual_skeleton.dox  manual_skeleton_grid_geom.dox  manual_skeleton_operators.dox  manual_skeleton_patch_geom.dox
source/SAMRAI/geom/fortran/: Makefile.depend  Makefile.in  geom_cartcoarsen1d.f  geom_cartcoarsen1d.m4  geom_cartcoarsen2d.f  geom_cartcoarsen2d.m4  geom_cartcoarsen3d.f  geom_cartcoarsen3d.m4  geom_cartcoarsen4d.f  geom_cartcoarsen4d.m4  geom_cartrefine1d.f  geom_cartrefine1d.m4  geom_cartrefine2d.f  geom_cartrefine2d.m4  geom_cartrefine3d.f  geom_cartrefine3d.m4  geom_m4cartcoarsenops1d.i  geom_m4cartcoarsenops2d.i  geom_m4cartcoarsenops3d.i  geom_m4cartcoarsenops4d.i  geom_m4cartopstuff.i  geom_m4cartrefineops1d.i  geom_m4cartrefineops2d.i  geom_m4cartrefineops3d.i
source/SAMRAI/solv/: CMakeLists.txt  CVODEAbstractFunctions.C  CVODEAbstractFunctions.h  CVODESolver.C  CVODESolver.I  CVODESolver.h  CartesianRobinBcHelper.C  CartesianRobinBcHelper.I  CartesianRobinBcHelper.h  CellPoissonFACOps.C  CellPoissonFACOps.I  CellPoissonFACOps.h  CellPoissonFACSolver.C  CellPoissonFACSolver.I  CellPoissonFACSolver.h  CellPoissonHypreSolver.C  CellPoissonHypreSolver.I  CellPoissonHypreSolver.h  FACOperatorStrategy.C  FACOperatorStrategy.h  FACPreconditioner.C  FACPreconditioner.I  FACPreconditioner.h  GhostCellRobinBcCoefs.C  GhostCellRobinBcCoefs.I  GhostCellRobinBcCoefs.h  KINSOLAbstractFunctions.C  KINSOLAbstractFunctions.h  KINSOLSolver.C  KINSOLSolver.I  KINSOLSolver.h  KINSOL_SAMRAIContext.C  KINSOL_SAMRAIContext.I  KINSOL_SAMRAIContext.h  LocationIndexRobinBcCoefs.C  LocationIndexRobinBcCoefs.I  LocationIndexRobinBcCoefs.h  Makefile.depend  Makefile.in  NonlinearSolverStrategy.C  (+31 more)
source/SAMRAI/solv/dox/: manual.dox  manual_FAC.dox  manual_nonlinear.dox  manual_packages.dox  manual_packages_petsc.dox  manual_packages_sundials.dox  manual_packages_sundials_cvode.dox  manual_packages_sundials_kinsol.dox  manual_packages_sundials_vector.dox  manual_poisson.dox  manual_vectors.dox
source/SAMRAI/solv/fortran/: Makefile.depend  Makefile.in  solv_cartesianrobinbchelper2d.f  solv_cartesianrobinbchelper3d.f  solv_cellpoissonfacops2d.f  solv_cellpoissonfacops3d.f  solv_cellpoissonhypresolver2d.f  solv_cellpoissonhypresolver3d.f
source/SAMRAI/tbox/: AllocatorDatabase.C  AllocatorDatabase.h  Array.C  Array.I  Array.h  ArraySpecial.C  AsyncCommGroup.C  AsyncCommGroup.I  AsyncCommGroup.h  AsyncCommPeer.C  AsyncCommPeer.I  AsyncCommPeer.h  AsyncCommStage.C  AsyncCommStage.I  AsyncCommStage.h  BalancedDepthFirstTree.C  BalancedDepthFirstTree.I  BalancedDepthFirstTree.h  Boost.h  BreadthFirstRankTree.C  BreadthFirstRankTree.h  CMakeLists.txt  CenteredRankTree.C  CenteredRankTree.h  Clock.C  Clock.I  Clock.h  Collectives.h  CommGraphWriter.C  CommGraphWriter.h  Complex.h  ConduitDatabase.C  ConduitDatabase.h  ConstPointer.C  ConstPointer.I  ConstPointer.h  ConstPointerBase.C  ConstPointerBase.I  ConstPointerBase.h  CudaSupport.h  (+139 more)
source/SAMRAI/tbox/dox/: manual.dox  manual_base.dox  manual_database.dox  manual_inputdb.dox  manual_memory.dox  manual_parallel.dox  manual_restartdb.dox  (+2 more)
(+7365 files in other folders)
